--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,11 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Riemann Zeta function'
+date: 2023-10-7
+permalink: /posts/2023/10/Riemann-zeta/
 tags:
   - cool posts
-  - category1
-  - category2
+  - 年轻人
+  - 网页
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
-
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
+$$\zeta(2)=\frac{\pi^2}{6}$$
