--- a/_posts/2023-10-11-Measure.md
+++ b/_posts/2023-10-11-Measure.md
@@ -1,7 +1,7 @@
 ---
-title: 'Riemann Zeta function'
-date: 2023-10-7
-permalink: /posts/2023/10/Riemann-zeta/
+title: 'Measure'
+date: 2023-10-11
+permalink: /posts/2023/10/Measure/
 tags:
   - cool posts
   - 年轻人
