--- a/_publications/2023-10-07-paper-年轻人的第一个网页.md
+++ b/_publications/2023-10-07-paper-年轻人的第一个网页.md
@@ -1,15 +1,15 @@
 ---
-title: "年轻人的第一个网页"
+title: "Null"
 collection: publications
-permalink: /publication/年轻人的第一个网页
+permalink: /publication/Null
 excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2023-10-07
 venue: 'Journal 1'
-paperurl: 'https://hw-nav.github.io/files/年轻人的第一个网页.pdf'
+paperurl: 'https://hw-nav.github.io/files/Null.pdf'
 citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'
 ---
 This paper is about the number 1. The number 2 is left for future work.
 
-[Download paper here](https://hw-nav.github.io/files/年轻人的第一个网页.pdf)
+[Download paper here](https://hw-nav.github.io/files/Null.pdf)
 
 Recommended citation: Your Name, You. (2009). "Paper Title Number 1." <i>Journal 1</i>. 1(1).
